rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__test_cast_to_timestamp_with_tz_offset_hh_mm_ss.snap
---
source: cubesql/src/compile/mod.rs
expression: "execute_query(\"SELECT CAST('2026-01-26 00:00:00+00:00:00' AS timestamp);\".to_string(),\nDatabaseProtocol::PostgreSQL).await?"
---
+---------------------------------------------------------------------------+
| CAST(Utf8("2026-01-26 00:00:00+00:00:00") AS Timestamp(Nanosecond, None)) |
+---------------------------------------------------------------------------+
| 2026-01-26T00:00:00.000                                                   |
+---------------------------------------------------------------------------+
