rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__test_gdata_studio.snap
---
source: cubesql/src/compile/mod.rs
expression: "execute_query(\"/* mysql-connector-java-5.1.49 ( Revision: ad86f36e100e104cd926c6b81c8cab9565750116 ) */\n                SELECT  \\\n                    @@session.auto_increment_increment AS auto_increment_increment, \\\n                    @@character_set_client AS character_set_client, \\\n                    @@character_set_connection AS character_set_connection, \\\n                    @@character_set_results AS character_set_results, \\\n                    @@character_set_server AS character_set_server, \\\n                    @@collation_server AS collation_server, \\\n                    @@collation_connection AS collation_connection, \\\n                    @@init_connect AS init_connect, \\\n                    @@interactive_timeout AS interactive_timeout, \\\n                    @@license AS license, \\\n                    @@lower_case_table_names AS lower_case_table_names, \\\n                    @@max_allowed_packet AS max_allowed_packet, \\\n                    @@net_buffer_length AS net_buffer_length, \\\n                    @@net_write_timeout AS net_write_timeout, \\\n                    @@sql_mode AS sql_mode, \\\n                    @@system_time_zone AS system_time_zone, \\\n                    @@time_zone AS time_zone, \\\n                    @@transaction_isolation AS transaction_isolation, \\\n                    @@wait_timeout AS wait_timeout\n                \".to_string(),\n              DatabaseProtocol::MySQL).await?"
---
+--------------------------+----------------------+--------------------------+-----------------------+----------------------+--------------------+----------------------+--------------+---------------------+----------+------------------------+--------------------+-------------------+-------------------+-----------------------------------------------------------------------------------------------------------------------+------------------+-----------+-----------------------+--------------+
| auto_increment_increment | character_set_client | character_set_connection | character_set_results | character_set_server | collation_server   | collation_connection | init_connect | interactive_timeout | license  | lower_case_table_names | max_allowed_packet | net_buffer_length | net_write_timeout | sql_mode                                                                                                              | system_time_zone | time_zone | transaction_isolation | wait_timeout |
+--------------------------+----------------------+--------------------------+-----------------------+----------------------+--------------------+----------------------+--------------+---------------------+----------+------------------------+--------------------+-------------------+-------------------+-----------------------------------------------------------------------------------------------------------------------+------------------+-----------+-----------------------+--------------+
| NULL                     | utf8mb4              | utf8mb4                  | utf8mb4               | utf8mb4              | utf8mb4_0900_ai_ci | utf8mb4_general_ci   |              | 28800               | Apache 2 | 0                      | 67108864           | 16384             | 600               | ONLY_FULL_GROUP_BY,STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION | UTC              | SYSTEM    | REPEATABLE-READ       | 28800        |
+--------------------------+----------------------+--------------------------+-----------------------+----------------------+--------------------+----------------------+--------------+---------------------+----------+------------------------+--------------------+-------------------+-------------------+-----------------------------------------------------------------------------------------------------------------------+------------------+-----------+-----------------------+--------------+
