rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__test_sort_relations_1.snap
---
source: cubesql/src/compile/mod.rs
expression: "execute_query(\"select * from (select pg_class.oid AS oid from pg_class order by pg_class.oid) source\".to_string(),\n            DatabaseProtocol::PostgreSQL).await?"
---
+-------+
| oid   |
+-------+
| 18000 |
| 18016 |
| 18023 |
+-------+
