rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__test_sort_relations_4.snap
---
source: cubesql/src/compile/mod.rs
expression: "execute_query(\"select oid as oid from (select count(oid) as oid from pg_class order by count(pg_class.oid)) t\".to_string(),\n            DatabaseProtocol::PostgreSQL).await?"
---
+-----+
| oid |
+-----+
| 5   |
+-----+
